# nebula-e2e-tests

./: .env.example  .gitignore  README.md  cleanup.py  conftest.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: e2e-nightly.yml  e2e-post-deploy.yml  event-hub-dry-run.yml
docs/: KUBECTL_GUIDE.md
k8s/: e2e-cleanup-job.yml  e2e-job.yml
lib/: auth.py  blob_upload.py  config.py  event_hub.py  fixtures.py  pdf_generator.py  pipeline_runner.py  polling.py  report.py  run_context.py  slack_report.py  source_upload.py
lib/api_clients/: contract_drive.py  doc_reader.py  document_service.py  file_ingestion.py  gateway_document_service.py  gateway_file_ingestion.py
tests/api/: test_bulk_upload.py  test_event_hub_dry_run.py  test_multi_presigned_upload.py  test_presigned_upload.py  test_single_presigned_upload.py  test_smoke.py  test_ui_file_upload.py
tests/unit/: test_event_hub_type_matching.py  test_slack_report.py
