[project]
name = "e2e-tests"
version = "0.1.0"
description = "E2E tests for the document processing pipeline (Upload → OCR → Extraction)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "pydantic-settings>=2.7",
    "allure-pytest>=2.13",
    "azure-eventhub>=5.11",
]

[project.optional-dependencies]
ui = [
    "playwright>=1.49",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
markers = [
    "slow: marks tests that take >60s (OCR processing)",
]

# Live log capture — surfaces logger.info/exception from lib.event_hub
# and friends so Event Hub listener startup / capture events / errors
# are visible in the GitHub Actions run log.
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9",
]
