[project]
name = "e2e-tests"
version = "0.1.0"
description = "E2E tests for the document processing pipeline (Upload → OCR → Extraction)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "pydantic-settings>=2.7",
    "allure-pytest>=2.13",
    "azure-eventhub>=5.11",
    "azure-storage-blob>=12.19",
    "reportlab>=4.0",
]

[project.optional-dependencies]
ui = [
    "playwright>=1.49",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
markers = [
    "slow: marks tests that take >60s (OCR processing)",
    # Primary tag: every E2E test carries this so `-m e2e` runs the whole suite.
    "e2e: end-to-end pipeline tests",
    # Per-endpoint tags for targeting a single test case from CI.
    "bulk_upload: bulk-upload gateway endpoint pipeline test",
    "ui_upload: UI contract-drive file upload endpoint pipeline test",
    "presigned_upload: presigned-URL direct upload (initiate → PUT → file-uploaded) pipeline test",
]

# Live log capture — surfaces logger.info/exception from lib.event_hub
# and friends so Event Hub listener startup / capture events / errors
# are visible in the GitHub Actions run log.
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9",
]
